--- a/monit.service
+++ b/monit.service
@@ -6,9 +6,9 @@ Documentation=man:monit(1) https://mmonit.com/wiki/Monit/HowTo
 [Service]
 Type=simple
 KillMode=process
-ExecStart=/usr/local/bin/monit -I
-ExecStop=/usr/local/bin/monit quit
-ExecReload=/usr/local/bin/monit reload
+ExecStart=/usr/bin/monit -I
+ExecStop=/usr/bin/monit quit
+ExecReload=/usr/bin/monit reload
 Restart=on-abnormal
 StandardOutput=null
 
