Distribute Makefile into *.mk files, use yaml instead of yml, and distinguish better between development and production

--- a/.env.development.sample
+++ b/.env.development.sample
@@ -1,3 +1,5 @@
+ENVIRONMENT=development
+
 HOST=machine.de
 PRODUCTION_SUBDOMAIN=www
 STAGING_SUBDOMAIN=staging
@@ -21,4 +23,4 @@ EMAIL_ADDRESS=john.doe@machine.de
 SMTP_HOST=127.0.0.1
 SMTP_PORT=25
 
-NETWORK_INTERFACE=ens160
+NETWORK_INTERFACE=wlan
