--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,4 +1,6 @@
-HOST=sample.org
+ENVIRONMENT=production
+
+HOST=machine.de
 PRODUCTION_SUBDOMAIN=www
 STAGING_SUBDOMAIN=staging
 TELEMETRY_SUBDOMAIN=telemetry
@@ -17,8 +19,8 @@ METRICS_HTTP_PORT=10003
 TELEMETRY_GPRC_PORT=4317
 TELEMETRY_HTTP_PORT=4318
 
-EMAIL_ADDRESS=john.doe@sample.org
-SMTP_HOST=mail.sample.org
+EMAIL_ADDRESS=john.doe@machine.de
+SMTP_HOST=mail.machine.de
 SMTP_PORT=25
 
-NETWORK_INTERFACE=ens160
+NETWORK_INTERFACE=
