Use absolute paths for `make --file=...`

--- a/setup.yaml
+++ b/setup.yaml
@@ -284,27 +284,27 @@
           ansible.builtin.cron:
             name: database-backup
             special_time: daily
-            job: "chronic make --directory=/app/machine --file=./maintenance.mk backup-database prune-backups"
+            job: "chronic make --directory=/app/machine --file=/app/machine/maintenance.mk backup-database prune-backups"
 
         - name: Rotate logs, vacuum `journald`, and clean-up backed up logs
           become: true
           ansible.builtin.cron:
             name: journald-vacuuming
             special_time: daily
-            job: "chronic make --directory=/app/machine --file=./logs.mk rotate vacuum clean-up"
+            job: "chronic make --directory=/app/machine --file=/app/machine/logs.mk rotate vacuum clean-up"
 
         - name: Renew Transport Layer Security (TLS) certificates needed for the `S` in `HTTPS`
           ansible.builtin.cron:
             name: tls-renewal
             special_time: daily
-            job: "chronic make --directory=/app/machine --file=./certificates.mk tls"
+            job: "chronic make --directory=/app/machine --file=/app/machine/docker.mk renew-tls"
 
         - name: Set periodic docker system prune
           # See https://docs.docker.com/config/pruning/#prune-everything
           ansible.builtin.cron:
             name: docker-prune
             special_time: daily
-            job: "chronic make --directory=/app/machine --file=./maintenance.mk prune-docker"
+            job: "chronic make --directory=/app/machine --file=/app/machine/maintenance.mk prune-docker"
 
     - name: GnuPG
       become: true
