Allow big cookies

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -12,6 +12,9 @@ proxy_buffers           4 256k;
 proxy_busy_buffers_size 256k;
 
 client_max_body_size    0;
+client_body_buffer_size 128k;
+client_header_buffer_size 4k;
+large_client_header_buffers 4 16k;
 
 ssl_certificate /etc/letsencrypt/live/${HOST}/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/${HOST}/privkey.pem;
