--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -58,7 +58,7 @@ services:
       - "0.0.0.0:${HTTPS_PORT:?required}:443"
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    command: [ "nginx", "-g", "daemon off;" ]
+    command: [ "nginx-debug", "-g", "daemon off;" ]
     restart: "always"
     healthcheck:
       test: [ "CMD-SHELL", "service nginx status || exit 1" ]
@@ -141,6 +141,8 @@ services:
       - ./certbot/letsencrypt:/var/lib/letsencrypt # --work-dir
       - ./certbot/logs:/var/log/letsencrypt # --logs-dir
       - ./certbot/www:/var/www/certbot # --webroot-path
+    profiles:
+      - "manual"
 
   # Test for example `./docker.mk setup` within `./docker.mk machine`
   machine:
@@ -153,6 +155,8 @@ services:
       TELEMETRY_DATA_HOST: "host.docker.internal"
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    profiles:
+      - "manual"
 
 volumes:
   logs:
