Do not start autoheal in development

--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -32,6 +32,8 @@ services:
     restart: "always"
     deploy:
       replicas: 1
+    profiles:
+      - "manual"
 
   # https://hub.docker.com/_/nginx
   reverse_proxy:
