--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -1,16 +1,16 @@
-# map $request_port $port_suffix {
-#   80      "";
-#   443     "";
-#   default ":$request_port";
-# }
+map $request_port $port_suffix {
+  80      "";
+  443     "";
+  default ":$request_port";
+}
 
 proxy_redirect          off;
 proxy_set_header        Host $host;
-# proxy_set_header        Host $host$port_suffix;
 proxy_set_header        X-Real-IP $remote_addr;
 proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header        X-Forwarded-Proto $scheme;
 proxy_set_header        X-Forwarded-Port $request_port;
+proxy_set_header        X-Forwarded-Host $host$port_suffix;
 
 proxy_connect_timeout   90;
 proxy_send_timeout      90;
