--- a/setup.yaml
+++ b/setup.yaml
@@ -305,6 +305,18 @@
             special_time: daily
             job: "chronic make --directory=/app/machine --file=/app/machine/maintenance.mk prune-docker"
 
+        - name: Restart Docker backend service in production to reload rotated JWT certificates
+          ansible.builtin.cron:
+            name: restart-backend-service-in-production
+            special_time: daily
+            job: "chronic make --directory=/app/machine --file=/app/machine/maintenance.mk restart SERVICE=backend ENVIRONMENT=production"
+
+        - name: Restart Docker backend service in staging to reload rotated JWT certificates
+          ansible.builtin.cron:
+            name: restart-backend-service-in-staging
+            special_time: daily
+            job: "chronic make --directory=/app/machine --file=/app/machine/maintenance.mk restart SERVICE=backend ENVIRONMENT=staging"
+
         - name: Rotate logs, vacuum `journald`, and clean-up backed up logs (as the root user)
           become: true
           ansible.builtin.cron:
