--- a/setup.yaml
+++ b/setup.yaml
@@ -354,6 +354,18 @@
             name: gnupg2
             state: present
 
+        - name: Disable keyboxd in GnuPG common.conf
+          ansible.builtin.lineinfile:
+            path: "~/.gnupg/common.conf"
+            line: "no-use-keyboxd"
+            create: yes
+            mode: '0600'
+            state: present
+
+        - name: Kill GnuPG daemons to apply changes
+          ansible.builtin.command: "gpgconf --kill all"
+          changed_when: true
+
     - name: Docker
       # Inspired by https://ops.tips/blog/docker-ansible-role/
       become: true
