Disable basic auth for graphql endpoint in staging (for now)

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -127,6 +127,11 @@ server {
         proxy_pass http://staging;
     }
 
+    location /graphql/ {
+        auth_basic "off";
+        proxy_pass http://staging;
+    }
+
     location /connect/ {
         auth_basic "off";
         proxy_pass http://staging;
