--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -39,6 +39,13 @@ map $http_upgrade $connection_upgrade {
   '' close;
 }
 
+# If the header "Proxy-Authorization" exists, use it.
+# Otherwise, use "Authorization".
+map $http_proxy_authorization $custom_authorization {
+    "~.+"   $http_proxy_authorization;
+    default $http_authorization;
+}
+
 upstream production {
   server host.docker.internal:${PRODUCTION_HTTP_PORT};
 }
@@ -115,8 +122,13 @@ server {
     server_name ${STAGING_SUBDOMAIN}.${HOST};
     server_tokens off;
 
+    set $stored_http_authorization $http_authorization;
+    set $http_authorization $custom_authorization;
+
     auth_basic "Restricted Area";
     auth_basic_user_file /etc/apache2/.htpasswd;
+
+    proxy_set_header Authorization $stored_http_authorization;
 
     location / {
         proxy_pass http://staging;
