Disable basic auth for graphql endpoint in staging (for now)

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -134,6 +134,11 @@ server {
         proxy_pass http://staging;
     }
 
+    location /graphql/ {
+        auth_basic "off";
+        proxy_pass http://staging;
+    }
+
     location /.well-known/ {
         auth_basic "off";
         proxy_pass http://staging;
